--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.jsx linguist-detectable=true
-*.js linguist-language=JavaScript
 *.jsx linguist-language=JavaScript
-*.css linguist-language=CSS
-src/index.css linguist-vendored
+*.js linguist-language=JavaScript
+*.css linguist-vendored
+public/index.html linguist-vendored
