--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,18 @@
+# Prioritaskan React/JavaScript
 *.jsx linguist-detectable=true
 *.jsx linguist-language=JavaScript
 *.js linguist-language=JavaScript
-*.css linguist-vendored
+
+# Abaikan HTML dari backend (Flask/dll)
+templates/*.html linguist-vendored
+src/templates/*.html linguist-vendored
 public/index.html linguist-vendored
+
+# Abaikan Python backend dari deteksi
+*.py linguist-vendored
+
+# Abaikan styling supaya gak dianggap CSS project
+*.css linguist-vendored
+
+# Biarkan sisanya tetap dihitung
+* linguist-vendored=false
