--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "bootstrap": "^5.3.6",
     "framer-motion": "^12.12.1",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
