--- a/final-project-frontend/package.json
+++ b/final-project-frontend/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "homepage": "https://Koosell.github.io/final-project-fullstack",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "predeploy": "npm run build", 
-  "deploy": "gh-pages -d dist"  
-},
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.12.1",
     "react": "^19.1.0",
