--- a/final-project-frontend/package.json
+++ b/final-project-frontend/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://Koosell.github.io/final-project-fullstack",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
